--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.29"
+    "mongoose": "^5.9.29",
+    "stripe": "^11.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
